--- a/language/it-IT/it-IT.mod_hero.ini
+++ b/language/it-IT/it-IT.mod_hero.ini
@@ -1,5 +1,5 @@
-MOD_HERO="Hero module"
-MOD_HERO_DESC="Modulo che crea un'immagine di sfondo con una descrizione."
+MOD_HERO="Hero"
+MOD_HERO_DESC="Hero header è un modulo Joomla che crea un'immagine di sfondo con la possibilità di aggiungere del testo descrittivo e collegare un link."
 
 MOD_HERO_FIELDSET_STYLE="Stile"
 
@@ -26,6 +26,8 @@ MOD_HERO_BUTTON_NOTE_LINK="Configurazione del link"
 MOD_HERO_BUTTON_NOTE_LINK_DESC="Modalità di ancoraggio."
 MOD_HERO_BUTTON_LINK="Link pulsante"
 MOD_HERO_BUTTON_LINK_DESC="Il link a cui rimanda il pulsante."
+MOD_HERO_ALIGN="Allineamento"
+MOD_HERO_ALIGN_DESC="Definisci l'allineamento del testo."
 
 MOD_HERO_HEIGHT="Altezza hero"
-MOD_HERO_HEIGHT_DESC="Imposta l'altezza del modulo. Le misure si intendono in %."
+MOD_HERO_HEIGHT_DESC="Imposta l'altezza del modulo. Specificare se in pixel (px) o in percentuale (%)."
