--- a/language/it-IT/it-IT.mod_hero.sys.ini
+++ b/language/it-IT/it-IT.mod_hero.sys.ini
@@ -1,2 +1,2 @@
-MOD_HERO="Hero module"
-MOD_HERO_DESC="Modulo che crea un'immagine di sfondo con una descrizione."
+MOD_HERO="Hero"
+MOD_HERO_DESC="Hero header è un modulo Joomla che crea un'immagine di sfondo con la possibilità di aggiungere del testo descrittivo e collegare un link."
